--- a/GameEditor/Base.lproj/MainMenu.xib
+++ b/GameEditor/Base.lproj/MainMenu.xib
@@ -386,14 +386,14 @@
                             <rect key="frame" x="1" y="0.0" width="238" height="134"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="systemDefault" headerView="h40-p5-Bi4" viewBased="YES" floatsGroupRows="NO" outlineTableColumn="UZW-3o-Jlu" id="HxU-5v-1iN">
+                                <outlineView appearanceType="vibrantLight" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="systemDefault" headerView="h40-p5-Bi4" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="14" outlineTableColumn="UZW-3o-Jlu" id="HxU-5v-1iN">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                     <tableColumns>
-                                        <tableColumn identifier="key" width="106.85546875" minWidth="16" maxWidth="1000" id="UZW-3o-Jlu">
-                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
+                                        <tableColumn identifier="key" width="76" minWidth="16" maxWidth="1000" id="UZW-3o-Jlu">
+                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="center" title="Key">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -406,11 +406,11 @@
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             <prototypeCellViews>
                                                 <tableCellView identifier="group" id="7rC-7M-gVg">
-                                                    <rect key="frame" x="1" y="1" width="107" height="17"/>
+                                                    <rect key="frame" x="1" y="1" width="76" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="Iu5-YD-4BS">
-                                                            <rect key="frame" x="0.0" y="1" width="107" height="14"/>
+                                                            <rect key="frame" x="0.0" y="1" width="76" height="14"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Group" id="JOT-tz-8bR">
                                                                 <font key="font" metaFont="smallSystemBold"/>
@@ -418,7 +418,6 @@
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
                                                             <connections>
-                                                                <binding destination="7rC-7M-gVg" name="editable" keyPath="objectValue.isEditable" id="Rag-Jb-cNa"/>
                                                                 <binding destination="7rC-7M-gVg" name="value" keyPath="objectValue.name" id="OMd-qQ-BNG"/>
                                                             </connections>
                                                         </textField>
@@ -428,11 +427,11 @@
                                                     </connections>
                                                 </tableCellView>
                                                 <tableCellView identifier="key" id="fRs-0f-VcJ">
-                                                    <rect key="frame" x="1" y="20" width="107" height="17"/>
+                                                    <rect key="frame" x="1" y="20" width="76" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="tMk-yX-EtF">
-                                                            <rect key="frame" x="0.0" y="0.0" width="107" height="17"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="right" title="name" id="zsv-zk-Ttf">
                                                                 <font key="font" metaFont="smallSystem"/>
@@ -440,7 +439,6 @@
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
                                                             <connections>
-                                                                <binding destination="fRs-0f-VcJ" name="editable" keyPath="objectValue.isEditable" id="eBk-aM-Zok"/>
                                                                 <binding destination="fRs-0f-VcJ" name="value" keyPath="objectValue.name" id="xXp-Yg-71f">
                                                                     <dictionary key="options">
                                                                         <string key="NSValueTransformerName">AttibuteNameTransformer</string>
@@ -452,8 +450,8 @@
                                                 </tableCellView>
                                             </prototypeCellViews>
                                         </tableColumn>
-                                        <tableColumn identifier="value" width="129" minWidth="10" maxWidth="1000" id="Ke9-EM-eLT">
-                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
+                                        <tableColumn identifier="value" width="160" minWidth="10" maxWidth="1000" id="Ke9-EM-eLT">
+                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="center" title="Value">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -466,11 +464,11 @@
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             <prototypeCellViews>
                                                 <tableCellView identifier="generic attribute" id="Yzo-qi-qHn">
-                                                    <rect key="frame" x="111" y="1" width="129" height="17"/>
+                                                    <rect key="frame" x="80" y="1" width="160" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="3KK-RG-a0Z">
-                                                            <rect key="frame" x="0.0" y="0.0" width="129" height="17"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="160" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="generic attribute" id="RrX-Zq-Ckg">
                                                                 <font key="font" metaFont="smallSystem"/>
@@ -478,19 +476,18 @@
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
                                                             <connections>
-                                                                <binding destination="fRs-0f-VcJ" name="editable" keyPath="objectValue.isEditable" id="1zV-4s-xQb"/>
                                                                 <binding destination="Yzo-qi-qHn" name="value" keyPath="objectValue.value" id="JRC-d7-ZfY"/>
                                                             </connections>
                                                         </textField>
                                                     </subviews>
                                                 </tableCellView>
                                                 <tableCellView identifier="{CGPoint=dd}" id="3pg-5t-02p">
-                                                    <rect key="frame" x="111" y="20" width="129" height="17"/>
+                                                    <rect key="frame" x="80" y="20" width="160" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <customView id="Vw7-Ih-Dfd">
-                                                            <rect key="frame" x="0.0" y="0.0" width="161" height="17"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="159" height="17"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="vGy-2F-Vos" customClass="StepperTextField">
                                                                     <rect key="frame" x="0.0" y="-1" width="81" height="19"/>
@@ -511,7 +508,6 @@
                                                                         <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
                                                                     </userDefinedRuntimeAttributes>
                                                                     <connections>
-                                                                        <binding destination="3pg-5t-02p" name="editable" keyPath="objectValue.editable" id="mbf-NS-njY"/>
                                                                         <binding destination="3pg-5t-02p" name="value" keyPath="objectValue.x" id="OSH-VF-Xml">
                                                                             <dictionary key="options">
                                                                                 <bool key="NSConditionallySetsEditable" value="YES"/>
@@ -542,7 +538,6 @@
                                                                         <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
                                                                     </userDefinedRuntimeAttributes>
                                                                     <connections>
-                                                                        <binding destination="3pg-5t-02p" name="editable" keyPath="objectValue.editable" id="XEq-cp-CCD"/>
                                                                         <binding destination="3pg-5t-02p" name="value" keyPath="objectValue.y" id="c9x-mc-Wgp"/>
                                                                     </connections>
                                                                 </textField>
@@ -554,7 +549,7 @@
                                                     </connections>
                                                 </tableCellView>
                                                 <tableCellView identifier="c" id="gDz-Um-7CJ">
-                                                    <rect key="frame" x="111" y="39" width="129" height="17"/>
+                                                    <rect key="frame" x="80" y="39" width="160" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <button id="vOX-wV-7o8">
@@ -565,14 +560,13 @@
                                                                 <font key="font" metaFont="smallSystem"/>
                                                             </buttonCell>
                                                             <connections>
-                                                                <binding destination="gDz-Um-7CJ" name="enabled" keyPath="objectValue.editable" id="JrF-Yx-k86"/>
                                                                 <binding destination="gDz-Um-7CJ" name="value" keyPath="objectValue.value" id="rYO-qN-FUy"/>
                                                             </connections>
                                                         </button>
                                                     </subviews>
                                                 </tableCellView>
                                                 <tableCellView identifier="d" id="xBB-5P-BWW">
-                                                    <rect key="frame" x="111" y="58" width="129" height="17"/>
+                                                    <rect key="frame" x="80" y="58" width="160" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" id="YEC-z4-O9q" customClass="StepperTextField">
@@ -594,14 +588,13 @@
                                                                 <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
                                                             </userDefinedRuntimeAttributes>
                                                             <connections>
-                                                                <binding destination="xBB-5P-BWW" name="editable" keyPath="objectValue.editable" id="UD5-iD-ayr"/>
                                                                 <binding destination="xBB-5P-BWW" name="value" keyPath="objectValue.value" id="cks-7o-AUW"/>
                                                             </connections>
                                                         </textField>
                                                     </subviews>
                                                 </tableCellView>
                                                 <tableCellView identifier="degrees" id="qa2-aV-mjT">
-                                                    <rect key="frame" x="111" y="77" width="129" height="17"/>
+                                                    <rect key="frame" x="80" y="77" width="160" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <textField verticalHuggingPriority="750" id="74G-KB-MvT" customClass="StepperTextField">
@@ -623,7 +616,6 @@
                                                                 <userDefinedRuntimeAttribute type="image" keyPath="alternateDec" value="AltDecreaseStepper"/>
                                                             </userDefinedRuntimeAttributes>
                                                             <connections>
-                                                                <binding destination="qa2-aV-mjT" name="editable" keyPath="objectValue.editable" id="cpP-AR-69m"/>
                                                                 <binding destination="qa2-aV-mjT" name="value" keyPath="objectValue.value" id="p3w-46-bXw">
                                                                     <dictionary key="options">
                                                                         <string key="NSValueTransformerName">DegreesTransformer</string>
@@ -648,7 +640,7 @@
                             <rect key="frame" x="1" y="119" width="223" height="15"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="N12-UD-2Ub">
+                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="N12-UD-2Ub">
                             <rect key="frame" x="224" y="17" width="15" height="102"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
